Remove code that does not work with outstanding RedisplayText events. b=288821 r+sr=bzbarsky